day 2 - interface services

--- a/day1project/src/app/app.component.html
+++ b/day1project/src/app/app.component.html
@@ -1,1 +1,10 @@
 <app-header></app-header>
+
+<div class="row">
+    <div class="col-sm-7 card">
+        <app-products></app-products>
+    </div>
+    <div class="col-sm-5">
+        <app-cartitems></app-cartitems>
+    </div>
+</div>
