--- a/day1project/src/app/header.component.html
+++ b/day1project/src/app/header.component.html
@@ -1,6 +1,11 @@
 <nav class="navbar bg-dark navbar-expand-sm navbar-dark">
     <a href="" class="navbar-brand">
-        <img src="./../assets/images/woman-dress-icon.jpg" style="width: 120px;height: 40px;" />
+        <img src="./../assets/images/woman-dress-icon.jpg" style="width: 60px;height: 40px;" />
         &nbsp; {{appHeading}} 
     </a>
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-link" routerLink="/">Home</li>
+        <li class="nav-link" routerLink="/login">SignIn</li>
+        <li class="nav-link" routerLink="/">Quick Signup</li>
+    </ul>
 </nav>
