--- a/day1project/src/app/shopping/cartitems/cartitems.component.html
+++ b/day1project/src/app/shopping/cartitems/cartitems.component.html
@@ -3,22 +3,24 @@
 </h4>
 <table class="table table-bordered">
   <tr>
+  <th></th>
   <th>Name</th>
   <th>Price</th>
   <th>Quantity</th>
   <th>Amount</th>
 </tr>
 <tr *ngIf="cartItems.length == 0">
-  <td colspan="4">No data Found.</td>
+  <td colspan="5">No data Found.</td>
 </tr>
-<tr *ngFor="let item of cartItems">
+<tr *ngFor="let item of cartItems; let i=index">
+  <td><button class="btn btn-danger btn-sm" (click)="removeFromCart(i)">X</button></td>
   <td>{{item.name}}</td>
   <td>{{item.price}}</td>
-  <td>{{item.quantity}}</td>
+  <td><input type="number" [(ngModel)]="item.quantity" style="width: 50px"></td>
   <td>{{item.quantity * item.price}}</td>
 </tr>
 <tr>
-  <th colspan="3">Total Amount</th>
-  <td></td>
+  <th colspan="4">Total Amount</th>
+  <td>{{totalAmount()}}</td>
 </tr>
 </table>
